--- a/_config.yml
+++ b/_config.yml
@@ -135,13 +135,13 @@ page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-navbar-col: "#005C53"
-navbar-text-col: "#9FC131"
+navbar-col: "#F2B138"
+navbar-text-col: "#F1F2F0"
 navbar-border-col: "#DDDDDD"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
+footer-col: "#F2B138"
+footer-text-col: "#F1F2F0"
 footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
+footer-hover-col: "#F27244"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
