--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: Personal Website
+title:
 
 # Your name to show in the footer
-author: Dang Le
+author: 
 
 ###############################################
 # --- List of links in the navigation bar --- #
@@ -21,8 +21,8 @@ author: Dang Le
 
 navbar-links:
   About: "aboutme"
-  Experience:
-  Projects:
+  Experience: "s
+  Projects: "/assets/img/W26_Resume-Ext.pdf"
 
   
 
