--- a/_config.yml
+++ b/_config.yml
@@ -131,9 +131,9 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
+page-col: "#F1F2F0"
+text-col: "#F1F2F0"
+link-col: "#F27244"
 hover-col: "#0085A1"
 navbar-col: "#F2B138"
 navbar-text-col: "#F1F2F0"
