--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ author:
 
 navbar-links:
   About: "aboutme"
-  Experience: "s
-  Projects: "/assets/img/W26_Resume-Ext.pdf"
+  Experience: "/assets/img/W26_Resume-Ext.pdf"
+  Projects: 
 
   
 
