--- a/_config.yml
+++ b/_config.yml
@@ -133,15 +133,15 @@ navbar-var-length: false
 
 page-col: "#FFFFFF"
 text-col: "#404040"
-link-col: "#F27244"
+link-col: "#008AFF"
 hover-col: "#0085A1"
-navbar-col: "#F2B138"
-navbar-text-col: "#F1F2F0"
+navbar-col: "#EAEAEA"
+navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-footer-col: "#F2B138"
-footer-text-col: "#F1F2F0"
+footer-col: "#EAEAEA"
+footer-text-col: "#777777"
 footer-link-col: "#404040"
-footer-hover-col: "#F27244"
+footer-hover-col: "#0085A1"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
