--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ navbar-links:
   About: "aboutme"
   Experience: "/assets/img/W26_Resume-Ext.pdf"
   Projects: "projects"
-  Coursework: "coursework"
+  Coursework: "/assets/img/Dang Le - Unofficial Transcript.pdf"
   Other: "other"
   
   
