--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ title: Dang Le
 
 # Your name to show in the footer
 author: 
+cover-img: "/assets/img/Profile Picture.png"
 
 ###############################################
 # --- List of links in the navigation bar --- #
